-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 13
-
Component/s: hotspot
-
b08
-
ppc
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8284678 | 11.0.16 | Martin Doerr | P3 | Resolved | Fixed | b01 |
The new AIX xlc 16 compiler includes xlclang++ (clang-based C++ compiler). However to be able to compile hotspot with the new compiler, a few adjustments need to be done.
- backported by
-
JDK-8284678 minor hotspot adjustments for xlclang++ from xlc16 on AIX
-
- Resolved
-
- relates to
-
JDK-8218965 aix: support xlclang++ in the compiler detection
-
- Resolved
-