8218136: minor hotspot adjustments for xlclang++ from xlc16 on AIX

Reviewed-by: dholmes, goetz, ihse